--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+  font-family: "iransans";
+  src:
+    url("/src/assets/IRANSansWeb\(FaNum\).woff") format("woff");
+}
+body * {
+    font-family: "iransans";
+}
